# firmapache

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  build.rs
.github/workflows/: ci.yml
docs/images/: README.md
docs/releases/: v0.1.0.md
packaging/arch/: .SRCINFO  PKGBUILD  README.md  firmapache.desktop
scripts/: build-arch-package.sh  build-linux.sh  check-release.sh  sha256sums.sh
src/: lib.rs  main.rs  metadata.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/desktop/: FirMapache.desktop
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs
src/api/: mod.rs  routes.rs
src/api/handlers/: certificates.rs  mod.rs  pkcs11.rs  sign.rs  status.rs  verify.rs  version.rs
src/config/: mod.rs
src/core/: mod.rs
src/core/cache/: mod.rs
src/core/certificates/: mod.rs
src/core/crypto/: verifier.rs
src/core/development/: mod.rs
src/core/identity/: identity.rs  manager.rs  mod.rs
src/core/pdf/: cms.rs  document.rs  error.rs  mod.rs  signing.rs
src/core/pkcs11/: mod.rs  provider.rs  signer.rs
src/core/pkcs12/: error.rs  mod.rs  provider.rs
src/core/signing/: compatible.rs  jws.rs  mod.rs  session_manager.rs
src/core/validation/: diagnostics.rs  jws.rs  mod.rs  pdf.rs
src/core/watcher/: mod.rs
src/error/: mod.rs
src/models/: compatible.rs  mod.rs  pkcs11.rs  response.rs  signing.rs
src/pkcs11/: provider.rs  token.rs
src/server/: mod.rs  routes.rs  tls.rs
src/server/handlers/: certificates.rs  compatible_sign.rs  config.rs  home.rs  mod.rs  pkcs11.rs  sign.rs  signing_sessions.rs  verify.rs  version.rs
src/utils/: mod.rs
ui/: app.js  index.html  styles.css
