[package]
name = "mini-firmador-desktop"
version = "0.1.0"
description = "Interfaz local de administracion para mini-firmador"
edition = "2024"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
mini-firmador = { path = ".." }
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tracing = "0.1"
uuid = "1"
