[package]
name = "firmapache-desktop"
version = "0.1.0"
description = "Interfaz local de administracion para FirMapache"
edition = "2024"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
firmapache = { package = "firmapache", path = ".." }
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tracing = "0.1"
uuid = "1"
